--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
-    "Qs": "^6.10.3",
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
@@ -22,6 +21,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "sortablejs": "^1.15.0",
     "vue": "2.6.10",
     "vue-json-excel": "^0.3.0",
     "vue-quill-editor": "^3.0.6",
